// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeSAS > #1 > rémunération totale 0, avec Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #2 > rémunération totale 0, avec Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 3904,
}
`;

exports[`computeSAS > #3 > rémunération totale 0, avec Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #4 > rémunération totale 0, avec Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 2097,
}
`;

exports[`computeSAS > #5 > rémunération totale 0, avec Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #6 > rémunération totale 0, avec Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 562,
}
`;

exports[`computeSAS > #7 > rémunération totale 0, avec Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #8 > rémunération totale 0, avec Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #9 > rémunération totale 0, sans Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #10 > rémunération totale 0, sans Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 3904,
}
`;

exports[`computeSAS > #11 > rémunération totale 0, sans Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #12 > rémunération totale 0, sans Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 2097,
}
`;

exports[`computeSAS > #13 > rémunération totale 0, sans Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #14 > rémunération totale 0, sans Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 562,
}
`;

exports[`computeSAS > #15 > rémunération totale 0, sans Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #16 > rémunération totale 0, sans Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 0,
  "ir": 0,
}
`;

exports[`computeSAS > #17 > rémunération totale 60000, avec Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 25736.87,
  "ir": 2936,
}
`;

exports[`computeSAS > #18 > rémunération totale 60000, avec Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 25736.87,
  "ir": 13736,
}
`;

exports[`computeSAS > #19 > rémunération totale 60000, avec Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 25736.87,
  "ir": 1559,
}
`;

exports[`computeSAS > #20 > rémunération totale 60000, avec Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 25736.87,
  "ir": 11929,
}
`;

exports[`computeSAS > #21 > rémunération totale 60000, avec Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 25736.87,
  "ir": 47,
}
`;

exports[`computeSAS > #22 > rémunération totale 60000, avec Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 25736.87,
  "ir": 6840,
}
`;

exports[`computeSAS > #23 > rémunération totale 60000, avec Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 25736.87,
  "ir": 0,
}
`;

exports[`computeSAS > #24 > rémunération totale 60000, avec Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 25736.87,
  "ir": 5033,
}
`;

exports[`computeSAS > #25 > rémunération totale 60000, sans Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 26566.77,
  "ir": 2703,
}
`;

exports[`computeSAS > #26 > rémunération totale 60000, sans Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 26566.77,
  "ir": 13503,
}
`;

exports[`computeSAS > #27 > rémunération totale 60000, sans Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 26566.77,
  "ir": 1435,
}
`;

exports[`computeSAS > #28 > rémunération totale 60000, sans Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 26566.77,
  "ir": 11696,
}
`;

exports[`computeSAS > #29 > rémunération totale 60000, sans Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 26566.77,
  "ir": 0,
}
`;

exports[`computeSAS > #30 > rémunération totale 60000, sans Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 26566.77,
  "ir": 6607,
}
`;

exports[`computeSAS > #31 > rémunération totale 60000, sans Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 26566.77,
  "ir": 0,
}
`;

exports[`computeSAS > #32 > rémunération totale 60000, sans Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 26566.77,
  "ir": 4800,
}
`;

exports[`computeSAS > #33 > rémunération totale 120000, avec Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 12360,
}
`;

exports[`computeSAS > #34 > rémunération totale 120000, avec Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 24877,
}
`;

exports[`computeSAS > #35 > rémunération totale 120000, avec Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 10553,
}
`;

exports[`computeSAS > #36 > rémunération totale 120000, avec Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 23070,
}
`;

exports[`computeSAS > #37 > rémunération totale 120000, avec Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 5464,
}
`;

exports[`computeSAS > #38 > rémunération totale 120000, avec Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 16264,
}
`;

exports[`computeSAS > #39 > rémunération totale 120000, avec Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 3870,
}
`;

exports[`computeSAS > #40 > rémunération totale 120000, avec Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 14457,
}
`;

exports[`computeSAS > #41 > rémunération totale 120000, sans Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 12360,
}
`;

exports[`computeSAS > #42 > rémunération totale 120000, sans Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 24877,
}
`;

exports[`computeSAS > #43 > rémunération totale 120000, sans Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 10553,
}
`;

exports[`computeSAS > #44 > rémunération totale 120000, sans Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 23070,
}
`;

exports[`computeSAS > #45 > rémunération totale 120000, sans Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 5464,
}
`;

exports[`computeSAS > #46 > rémunération totale 120000, sans Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 16264,
}
`;

exports[`computeSAS > #47 > rémunération totale 120000, sans Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 52115.02,
  "ir": 3870,
}
`;

exports[`computeSAS > #48 > rémunération totale 120000, sans Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 52115.02,
  "ir": 14457,
}
`;

exports[`computeSAS > #49 > rémunération nette 0, avec Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 645.39,
  "ir": 0,
}
`;

exports[`computeSAS > #50 > rémunération nette 0, avec Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 645.39,
  "ir": 3904,
}
`;

exports[`computeSAS > #51 > rémunération nette 0, avec Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 645.39,
  "ir": 0,
}
`;

exports[`computeSAS > #52 > rémunération nette 0, avec Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 645.39,
  "ir": 2097,
}
`;

exports[`computeSAS > #53 > rémunération nette 0, avec Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 645.39,
  "ir": 0,
}
`;

exports[`computeSAS > #54 > rémunération nette 0, avec Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 645.39,
  "ir": 562,
}
`;

exports[`computeSAS > #55 > rémunération nette 0, avec Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 645.39,
  "ir": 0,
}
`;

exports[`computeSAS > #56 > rémunération nette 0, avec Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 645.39,
  "ir": 0,
}
`;

exports[`computeSAS > #57 > rémunération nette 0, sans Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 706.95,
  "ir": 0,
}
`;

exports[`computeSAS > #58 > rémunération nette 0, sans Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 706.95,
  "ir": 3904,
}
`;

exports[`computeSAS > #59 > rémunération nette 0, sans Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 706.95,
  "ir": 0,
}
`;

exports[`computeSAS > #60 > rémunération nette 0, sans Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 706.95,
  "ir": 2097,
}
`;

exports[`computeSAS > #61 > rémunération nette 0, sans Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 706.95,
  "ir": 0,
}
`;

exports[`computeSAS > #62 > rémunération nette 0, sans Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 706.95,
  "ir": 562,
}
`;

exports[`computeSAS > #63 > rémunération nette 0, sans Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 706.95,
  "ir": 0,
}
`;

exports[`computeSAS > #64 > rémunération nette 0, sans Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 706.95,
  "ir": 0,
}
`;

exports[`computeSAS > #65 > rémunération nette 40000, avec Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 4563,
}
`;

exports[`computeSAS > #66 > rémunération nette 40000, avec Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 15363,
}
`;

exports[`computeSAS > #67 > rémunération nette 40000, avec Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 2756,
}
`;

exports[`computeSAS > #68 > rémunération nette 40000, avec Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 13556,
}
`;

exports[`computeSAS > #69 > rémunération nette 40000, avec Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 913,
}
`;

exports[`computeSAS > #70 > rémunération nette 40000, avec Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 8467,
}
`;

exports[`computeSAS > #71 > rémunération nette 40000, avec Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 0,
}
`;

exports[`computeSAS > #72 > rémunération nette 40000, avec Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 6660,
}
`;

exports[`computeSAS > #73 > rémunération nette 40000, sans Acre, Célibataire, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 4563,
}
`;

exports[`computeSAS > #74 > rémunération nette 40000, sans Acre, Célibataire, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 15363,
}
`;

exports[`computeSAS > #75 > rémunération nette 40000, sans Acre, Célibataire, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 2756,
}
`;

exports[`computeSAS > #76 > rémunération nette 40000, sans Acre, Célibataire, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 13556,
}
`;

exports[`computeSAS > #77 > rémunération nette 40000, sans Acre, Marié, sans enfant, sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 913,
}
`;

exports[`computeSAS > #78 > rémunération nette 40000, sans Acre, Marié, sans enfant, revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 8467,
}
`;

exports[`computeSAS > #79 > rémunération nette 40000, sans Acre, Marié, 1 enfant(s), sans revenu additionnel 1`] = `
{
  "cotisations": 31763.45,
  "ir": 0,
}
`;

exports[`computeSAS > #80 > rémunération nette 40000, sans Acre, Marié, 1 enfant(s), revenus additionnels 40000 1`] = `
{
  "cotisations": 31763.45,
  "ir": 6660,
}
`;
